--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
+    "algosdk": "^2.7.0",
     "elevenlabs-api": "^1.0.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.20.1",
-    "framer-motion": "^10.16.16"
+    "framer-motion": "^10.16.16",
+    "snoowrap": "^1.23.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
